Fix spacing and centering

--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -9,7 +9,7 @@
   text-align: center;
   display: grid;
   grid-template-columns: 1fr 4fr;
-  grid-template-rows: 2fr 1fr 10fr 1fr;
+  grid-template-rows: 1.5fr 1fr 10fr 1fr;
   gap: 4px;
 }
 
@@ -30,6 +30,7 @@
 
 .header>.logo {
   text-align: left;
+  align-self: center;
 }
 
 .menu {
@@ -72,6 +73,8 @@
 
 .nav {
   background-color: #C50208;
+  display: grid;
+  align-items: center;
 }
 
 .nav>ul {
@@ -88,7 +91,7 @@
 .article {
   background-color: #bccbde;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 15px;
 }
 
@@ -105,6 +108,10 @@
   text-align: center;
 }
 
+.card {
+  min-height: 200px;
+}
+
 .card p {
   color: black;
   font-weight: normal;
@@ -119,6 +126,8 @@
 .footer {
   background-color: #393f4d;
   grid-column: span 2;
+  display: grid;
+  align-items:center;
 }
 
 .footer p {
